# aws-esp-freertos

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp/esp-idf-lib/components/ultrasonic/: ultrasonic.c
main/: CMakeLists.txt  KConfig.projbuild  KConfig.projbuildold  idf_component.yml  main.c
main/communication/mqtt/: core_mqtt_agent_manager.c  core_mqtt_agent_manager.h  core_mqtt_agent_manager_config.h  core_mqtt_agent_manager_events.c  core_mqtt_agent_manager_events.h  subscription_manager.c  subscription_manager.h
main/communication/pppos/: pppos_client.c  pppos_client.h
main/communication/wifi/: app_wifi.c
main/hardware/: app_driver.c  app_driver.h  barrier_driver.c  barrier_driver.h  buzzer_driver.c  buzzer_driver.h  hcsr04_sensor.c  hcsr04_sensor.h  ina3221_sensor.c  ina3221_sensor.h  ina3221_sensor.old  led_driver.c  led_driver.h
main/tasks/control/: control_manager.c  control_manager.h
main/tasks/control/barrier/: barrier_control.c  barrier_control.h  barrier_control_config.h
main/tasks/control/buzzer/: buzzer_control.c  buzzer_control.h  buzzer_control_config.h
main/tasks/control/led/: led_control.c  led_control.h  led_control_config.h
main/tasks/perception/obstacle/: obstacle_perception.c  obstacle_perception.h
main/tasks/perception/power/: power_perception.c  power_perception.h
main/tasks/perception/wifi/: wifi_perception.c  wifi_perception.h
main/tasks/pubsub/: pubsub.c  pubsub.h  pubsub_config.h
